2005-08-26  Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/check_compile (UNIQUE_ID): New. Use to name output files.

2005-08-26  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/23081
	* include/tr1/array: Implement members back(), front(), data(),
	and the tuple interface; tidy.
	* testsuite/tr1/6_containers/array/element_access/back.cc: New.
	* testsuite/tr1/6_containers/array/element_access/data.cc: Likewise.
	* testsuite/tr1/6_containers/array/element_access/front.cc: Likewise.
	* testsuite/tr1/6_containers/array/tuple_interface/get.cc: Likewise.
	* testsuite/tr1/6_containers/array/tuple_interface/tuple_element.cc:
	Likewise.
	* testsuite/tr1/6_containers/array/tuple_interface/tuple_size.cc:
	Likewise.

2005-08-25  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1/hashtable: Use __throw_exception_again,
	not naked throw, in the catch clauses.

2005-08-24  Lawrence Lim  <llim@redhat.com>
            Jakub Jelinek  <jakub@redhat.com>
	    Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/23550
	* testsuite/21_strings/char_traits/requirements/char/1.cc
	(test01): Simplify counting.
	* testsuite/21_strings/char_traits/requirements/wchar_t/1.cc
	(test02): Same.

2005-08-24  Paolo Carlini  <pcarlini@suse.de>
	    Chris Jefferson  <chris@bubblescope.net>

	PR libstdc++/23465
	* include/tr1/hashtable (hash_code_base::m_swap): Use
	std::swap.
	(hashtable<>::hashtable(const hashtable&)): Use copy_code;
	fix m_allocate_node call.
	* testsuite/tr1/6_containers/unordered/hashtable/23465.cc: New.

2005-08-23  Kelley Cook  <kcook@gcc.gnu.org>

	PR libstdc++/23462
	* testsuite/data/sgetn.txt: Revert to previous FSF address.

2005-08-23  Thomas Kho  <tkho@ucla.edu>

	PR libstdc++/23358
	* include/bits/stl_construct.h (_Destroy(_ForwardIterator,
	_ForwardIterator, allocator<_Tp>)): Removed unused template parameter.

2005-08-22  Geoffrey Keating  <geoffk@apple.com>

	* testsuite/23_containers/vector/resize/1.cc: XFAIL on darwin8.